--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <form action ="#" method="get">
         <input type="number" name="firstName" id="firstName">
         <input type="text" name="lastName" id="lastName">
-        <input type="text" name="age" id="age">
+        <input type="text" name="age" id="age">       
+        <img src="#" alt="test img"/>
         <input type="button" value="enviar">
     </form>
 </body>
